Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8187

Qt 5.0 versions show warning "No qmlviewer installed"

    XMLWordPrintable

Details

    • 4e49c297bc000b5221f811f1945723f0931310da

    Description

      Using the latest creator + qt 5 build (msvc), The registered Qt 5 version shows a warning

      "No qmlviewer installed"

      though there is a qmlviewer.exe under bin, and a qt_lib_declarative.pri under mkspecs\modules.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-8187
        # Subject Branch Project Status CR V

        Activity

          People

            kkohne Kai Köhne
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes