Fix warning "No qmlviewer installed" for Qt 5 installations

b933be474124ac4f0e248e014d5ecbf4f6f3edbd changed the logic
to query for QT.declarative.bins . But we also have to actively retrieve
this ...

Task-number: QTCREATORBUG-8187
Change-Id: I78f3419a647690eb29a01968ad2ec05269bc72ae
Reviewed-by: Daniel Teske <daniel.teske@digia.com>